[metadata]
name = SignalCliApi
version = 0.1.3
author = Peter Nearing
author_email = me@peternearing.ca
description = A python interface to the signal-cli found at https://github.com/AsamK/signal-cli
long_description = file: README.md
long_description_content_type = text/markdown
url = https://peternearing.ca/signal
project_urls =
    Docs = https://peternearing.ca/signal
classifiers =
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
